saving before deleting previous app layer

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="root">Fetching from server...</div>
-	<script type="module" src="/dist/client/_router.js"></script>
+	<script type="module" src="/dist/client/appRoot.js"></script>
 </body>
 
 </html>
