--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Future of React</title>
+	<title>Jenius</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
