--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Jenius</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+		/>
+		<style>
+			:root {
+				--animate-duration: 500ms;
+			}
+		</style>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Jenius</title>
-	<script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body>
-	<div id="root">Fetching from server...</div>
-	<script type="module" src="/dist/client/appRoot.js"></script>
-</body>
-
+	<body>
+		<div id="root">Fetching from server...</div>
+		<script type="module" src="/dist/client/appRoot.js"></script>
+	</body>
 </html>
