start new layout, update song component

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -14,6 +14,14 @@
 			:root {
 				--animate-duration: 500ms;
 			}
+
+			a {
+				text-decoration: underline !important;
+			}
+
+			a:hover {
+				color: #64ffaf !important;
+			}
 		</style>
 	</head>
 
