complete layout update

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -13,6 +13,7 @@
 		<style>
 			:root {
 				--animate-duration: 500ms;
+				background-color: #202124;
 			}
 
 			a {
@@ -26,7 +27,7 @@
 	</head>
 
 	<body>
-		<div id="root">Fetching from server...</div>
+		<div id="root"></div>
 		<script type="module" src="/dist/client/appRoot.js"></script>
 	</body>
 </html>
