--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,6 +11,10 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 		/>
 		<style>
+			body {
+				margin: 0;
+			}
+
 			:root {
 				--animate-duration: 500ms;
 				background-color: #202124;
@@ -22,6 +26,23 @@
 
 			a:hover {
 				color: #64ffaf !important;
+			}
+
+			::-webkit-scrollbar {
+				width: 8px;
+			}
+
+			::-webkit-scrollbar-track {
+				background: #fffc64;
+			}
+
+			::-webkit-scrollbar-thumb {
+				background: #202124;
+				border-radius: 16px;
+			}
+
+			::-webkit-scrollbar-thumb:hover {
+				background: #64ffaf;
 			}
 		</style>
 	</head>
